MEM-161 Swagger
